[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "refactored-palm-tree.__version__"}
readme = {file = "README.rst", content-type = "text/x-rst"}
dependencies = {file = "requirements.txt"}


[tool.setuptools.packages.find]
include = ["pywa*"]
exclude = ["tests*"]

[project]
name = "refactored-palm-tree"
description = "second iteration python chatbot"
dynamic = ["version", "readme", "dependencies"]
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    {name = "Gibson Kemboi", email="gibsonsgibson88@gmail.com"}
]
keywords = ["chatbot", "python", "refactored-palm-tree"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.optional-dependencies]
flask = ["flask"]
fastapi = ["fastapi"]
openai = ["openai"]
cryptography = ["cryptography"]

[project.urls]
"Issue Tracker" = "https://github.com/Nerds-Catapult/refactored-palm-tree/issues"
"Source Code" = "https://github.com/Nerds-Catapult/refactored-palm-tree"
"Change Log" = "https://github.com/Nerds-Catapult/refactored-palm-tree/blob/main/CHANGELOG.md"


[project.scripts]
refactored-palm-tree = "refactored_palm_tree.cli:main"

[tool.ruff.lint]
ignore = ["E731", "F401", "E402"]